--- a/licensingserivce/src/main/resources/application.yml
+++ b/licensingserivce/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8989
+  port: 9989
 
 #spring.datasource.url=jdbc:mysql://192.168.21.225:3306/mytest
 #spring.datasource.username=testuser
@@ -51,8 +51,18 @@ spring:
         binder:
           brokers: 192.168.21.225:9092
           zk-nodes: 192.168.21.225:2181
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://192.168.21.182:8091/user
+
+logging.level.org.springframework.web: TRACE
+logging.level.org.springframework.http: TRACE
+logging.level.web: TRACE
+
 #logging.path=logs
 logging:
   level:
     org.springframework.cloud.config: DEBUG
+    org.springframework.web: DEBUG
 #logging.file=${logging.path}/licenseservice.log
