--- a/cloudgateway/pom.xml
+++ b/cloudgateway/pom.xml
@@ -36,11 +36,11 @@
 <!--            <version>2.2.0.BUILD-SNAPSHOT</version>-->
 <!--            <scope>compile</scope>-->
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-gateway-core</artifactId>
-<!--            <version>2.2.0.BUILD-SNAPSHOT</version>-->
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-gateway-core</artifactId>-->
+<!--&lt;!&ndash;            <version>2.2.0.BUILD-SNAPSHOT</version>&ndash;&gt;-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -53,6 +53,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.springframework.cloud</groupId>-->
+<!--                    <artifactId>spring-cloud-netflix-hystrix</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -65,7 +71,8 @@
 <!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+<!--            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>-->
+            <artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
             <!--            <version>1.0.0.RC1</version>-->
         </dependency>
     </dependencies>
