--- a/licensingservice/src/main/resources/application.yml
+++ b/licensingservice/src/main/resources/application.yml
@@ -80,5 +80,5 @@ spring:
 security:
   oauth2:
     resource:
-      user-info-uri: http://192.168.21.182:8091/user
+      user-info-uri: http://localhost:8091/user
 
