--- a/organizationservice/src/main/resources/application.yml
+++ b/organizationservice/src/main/resources/application.yml
@@ -15,19 +15,19 @@
 #eureka.client.register-with-eureka=true
 #eureka.client.service-url.defaultZone = http://192.168.21.120:8761/eureka/
 
-#eureka:
-#  instance:
-#    prefer-ip-address: true
-#
-#  client:
-#    fetch-registry: true
-#    register-with-eureka: true
-#    service-url:
-#      defaultZone: http://140.143.45.252:8761/eureka/
+eureka:
+  instance:
+    prefer-ip-address: true
+
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://192.168.1.84:8761/eureka/
 
 spring:
-  application:
-    name: organization-service
+#  application:
+#    name: organization-service
   zipkin:
     base-url: http://127.0.0.1:9411
     sender:
@@ -80,6 +80,6 @@ spring:
   datasource:
     username: root
     password: 19811981
-    url: jdbc:mysql://127.0.0.1:3306/organizations
+    url: jdbc:mysql://localhost:3306/organizations?useSSL=true&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
 
